import "google/protobuf/descriptor.proto";

package goby.core.proto;

message NotificationToServer
{

    enum NotificationType { 
        HEARTBEAT = 1;
        CONNECT = 2;
        DISCONNECT = 3;
        PUBLISH_REQUEST = 4;
        SUBSCRIBE_REQUEST = 5;
    }
    required NotificationType notification_type = 1;

    // used for connection
    optional string application_name = 2;


    optional string message_type = 3;
    // used to inform gobyd of the google protobuf type used for a 
    // given publish or subscribe request
    optional google.protobuf.FileDescriptorProto file_descriptor_proto = 4;

    // encoded contents of a message (if publish)
    optional bytes serialized_message = 5;

}

message NotificationToClient
{
    enum NotificationType { 
        HEARTBEAT = 1;
        CONNECTION_ACCEPTED = 2;
        CONNECTION_DENIED = 3;
        PUBLISH_ACCEPTED = 4;
        SUBSCRIBE_ACCEPTED = 5;
        INCOMING_MESSAGE = 6;
    }
    required NotificationType notification_type = 1;

    // why did we deny you?
    optional string explanation = 2;


    optional string message_type = 3;
    optional bytes serialized_message = 4;    
}
